testsuite/escript/func/func014-module-function-conflict.err
func014-module-function-conflict.src:2:1: error: User Function 'Broadcast' conflicts with Module Function of the same name.