testsuite/escript/func/func014-module-function-conflict.src
use uo;
function Broadcast() endfunction
